--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Telegram bot that uses a group as a file storage system. When a user uploads a file to the group, the bot replies with a public link. You can then share this link, and anyone who clicks on it will receive the file through the bot, making file sharing easy and efficient.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --env-file .env.dev --watch index.js"
   },
   "author": "Antoine Peña (antoinepdev)",
   "license": "ISC",
