--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file .env.dev --watch index.js"
+    "dev": "node --env-file .env.dev --watch index.js",
+    "prod": "node --env-file .env index.js"
   },
   "author": "Antoine Peña (antoinepdev)",
   "license": "ISC",
